backport upstream fix for child cat alignment

--- a/less/style.less
+++ b/less/style.less
@@ -319,10 +319,18 @@ body {
 }
 
 .subcategories {
-	.category-item {
-		margin-bottom: 20px;
-	}
-}
+	margin: 0;
+
+ 	.category-item {
+ 		margin-bottom: 20px;
+		box-shadow: none;
+
+		.category-icon {
+			margin-left: -8px;
+			margin-right: -8px;
+		}
+ 	}
+ }
 
 .topic {
 	> ul {
